--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -18,11 +18,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01142" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01142" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01142" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01142" />
-    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01142" />
+    <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01143" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01143" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01143" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01143" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01143" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-1.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.3.0-1.final" />
   </ItemGroup>
 
 </Project>
