--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -22,13 +22,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01149" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01149" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01149" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01149" />
-    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01149" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-2.final" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.3.0-2.final" />
+    <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01160" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01160" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01160" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01160" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01160" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-3.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.3.0-3.final" />
   </ItemGroup>
 
 </Project>
