--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01169" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01169" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01169" />
+    <PackageReference Include="DSharpPlus.Rest" Version="4.3.0-nightly-01169" />
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01169" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01169" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0-1.final" />
