--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="DSharpPlus.Rest" Version="4.3.0-nightly-01169" />
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01169" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01169" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0-1.final" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.4.0-1.final" />
   </ItemGroup>
