--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -1,36 +1,37 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-    <StartupObject>MADS.MainProgram</StartupObject>
-    <RootNamespace>MADS</RootNamespace>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>disable</Nullable>
+        <StartupObject>MADS.MainProgram</StartupObject>
+        <RootNamespace>MADS</RootNamespace>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>embedded</DebugType>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <DebugType>embedded</DebugType>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DebugType>embedded</DebugType>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+        <DebugType>embedded</DebugType>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="..\.editorconfig" Link=".editorconfig"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01169" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01169" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01169" />
-    <PackageReference Include="DSharpPlus.Rest" Version="4.3.0-nightly-01169" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01169" />
-    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01169" />
-    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0-1.final" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.4.0-1.final" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01169"/>
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01169"/>
+        <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01169"/>
+        <PackageReference Include="DSharpPlus.Rest" Version="4.3.0-nightly-01169"/>
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01169"/>
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01169"/>
+        <PackageReference Include="Humanizer.Core" Version="2.14.1"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0-1.final"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.4.0-1.final"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.7.22376.2"/>
+    </ItemGroup>
 
 </Project>
