--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -22,16 +22,22 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01169" />
-        <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01169" />
-        <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01169" />
-        <PackageReference Include="DSharpPlus.Rest" Version="4.3.0-nightly-01169" />
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01169" />
-        <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01169" />
+        <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01171" />
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01171" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01171" />
+        <PackageReference Include="DSharpPlus.Rest" Version="4.3.0-nightly-01171" />
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01171" />
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01171" />
+        <PackageReference Include="EntityFramework" Version="6.4.4" />
         <PackageReference Include="Humanizer.Core" Version="2.14.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0-1.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.4.0-1.final" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.7.22376.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
     </ItemGroup>
 
 </Project>
