--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -29,6 +29,7 @@
         <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01171" />
         <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01171" />
         <PackageReference Include="EntityFramework" Version="6.4.4" />
+        <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="6.0.1" />
         <PackageReference Include="Humanizer.Core" Version="2.14.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0-1.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.4.0-1.final" />
@@ -38,6 +39,10 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations" />
     </ItemGroup>
 
 </Project>
