--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -7,6 +7,7 @@
         <Nullable>disable</Nullable>
         <StartupObject>MADS.MainProgram</StartupObject>
         <RootNamespace>MADS</RootNamespace>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -22,12 +23,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01175" />
-        <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01175" />
-        <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01175" />
-        <PackageReference Include="DSharpPlus.Rest" Version="4.3.0-nightly-01175" />
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01175" />
-        <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01175" />
+        <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01184" />
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01184" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01184" />
+        <PackageReference Include="DSharpPlus.Rest" Version="4.3.0-nightly-01184" />
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01184" />
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01184" />
         <PackageReference Include="EntityFramework" Version="6.4.4" />
         <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="6.0.1" />
         <PackageReference Include="Humanizer.Core" Version="2.14.1" />
