--- a/ModularAssistentForDiscordServer/config.json
+++ b/ModularAssistentForDiscordServer/config.json
@@ -2,5 +2,6 @@
   "token": "<Token here>",
   "defaultPrefix": "!",
   "minmumloglvl": 1,
-  "databaseConnectionString": "Server=192.168.178.61,Port=3306;Database=MadsDB;User=USR;Password=PWD;"
+  "databaseConnectionString": "Server=192.168.178.61,Port=3306;Database=MadsDB;User=USR;Password=PWD;",
+  "DmProxyChannelId": 0  
 }
