--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -19,7 +19,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="..\.editorconfig" Link=".editorconfig" />
+        <None Include="..\.editorconfig" Link=".editorconfig"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -40,6 +40,10 @@
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0-silver.1" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <Folder Include="Migrations"/>
     </ItemGroup>
 
 </Project>
