--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -23,25 +23,25 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DSharpPlus" Version="4.4.0-nightly-01353"/>
-        <PackageReference Include="DSharpPlus.CommandsNext" Version="4.4.0-nightly-01353"/>
-        <PackageReference Include="DSharpPlus.Interactivity" Version="4.4.0-nightly-01353"/>
-        <PackageReference Include="DSharpPlus.Rest" Version="4.4.0-nightly-01353"/>
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.4.0-nightly-01353"/>
-        <PackageReference Include="DSharpPlus.VoiceNext" Version="4.4.0-nightly-01353"/>
-        <PackageReference Include="EntityFramework" Version="6.4.4"/>
-        <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="7.0.0"/>
-        <PackageReference Include="Humanizer.Core" Version="2.14.1"/>
-        <PackageReference Include="MediatR" Version="12.0.1"/>
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.5.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
+        <PackageReference Include="DSharpPlus" Version="4.4.0-nightly-01393" />
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="4.4.0-nightly-01393" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="4.4.0-nightly-01393" />
+        <PackageReference Include="DSharpPlus.Rest" Version="4.4.0-nightly-01393" />
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.4.0-nightly-01393" />
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="4.4.0-nightly-01393" />
+        <PackageReference Include="EntityFramework" Version="6.4.4" />
+        <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="7.0.0" />
+        <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+        <PackageReference Include="MediatR" Version="12.0.1" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0-1.final" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0-1.final" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-preview.1.23111.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1"/>
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-preview.1.23110.8" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
