--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
@@ -23,29 +22,33 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01502"/>
-        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01502"/>
-        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01502"/>
-        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-01502"/>
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01502"/>
-        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-01502"/>
+        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01581"/>
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01581"/>
+        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01581"/>
+        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-01581"/>
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01581"/>
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-01581"/>
         <PackageReference Include="EntityFramework" Version="6.4.4"/>
         <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="7.0.0"/>
         <PackageReference Include="Humanizer.Core" Version="2.14.1"/>
         <PackageReference Include="MediatR" Version="12.0.1"/>
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0-1.final"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0-1.final"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0-1.final"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.7.0-1.final"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-preview.2.23128.3">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-preview.2.23128.3"/>
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0"/>
-        <PackageReference Include="Serilog" Version="3.0.0-dev-02018"/>
+        <PackageReference Include="Quartz" Version="3.6.2"/>
+        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.6.2"/>
+        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.6.2"/>
+        <PackageReference Include="Quartz.Jobs" Version="3.6.2"/>
+        <PackageReference Include="Quartz.Serialization.Json" Version="3.6.2"/>
+        <PackageReference Include="Serilog" Version="3.0.0-dev-02022"/>
         <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0"/>
         <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0"/>
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910"/>
     </ItemGroup>
-
 </Project>
