--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -23,12 +23,19 @@
 
     <ItemGroup>
         <PackageReference Include="DeepL.net" Version="1.8.0" />
+        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01958" />
+        <PackageReference Include="DSharpPlus.Commands" Version="5.0.0-nightly-01958" />
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01958" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01958" />
+        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-01958" />
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01958" />
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-01958" />
         <PackageReference Include="EntityFramework" Version="6.4.4" />
-        <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="7.0.0" />
+        <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="8.0.0" />
         <PackageReference Include="Humanizer.Core" Version="2.14.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.5.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -42,12 +49,7 @@
         <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10370" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
-        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01892" />
-        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01886" />
-        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01886" />
-        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-01886" />
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01886" />
-        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-01886" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+        
     </ItemGroup>
 </Project>
