--- a/.github/workflows/containerImages.yml
+++ b/.github/workflows/containerImages.yml
@@ -11,11 +11,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
-
-      - name: Get Previous tag
-        id: previoustag
-        uses: WyriHaximus/github-action-get-previous-tag@master
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -37,9 +32,9 @@ jobs:
           push: true
           tags: |
             ghcr.io/plerx2493/mads:latest
-            ghcr.io/plerx2493/mads:${{ steps.previoustag.outputs.tag }}
+            ghcr.io/plerx2493/mads:${{ github.sha }}
           build-args: |
-            "BUILD_VER=${{ steps.previoustag.outputs.tag }}"
+            "BUILD_VER=${{ github.sha }}"
             
       - name: Build and Push QuartzDB
         uses: docker/build-push-action@v3
@@ -49,6 +44,6 @@ jobs:
           push: true
           tags: |
             ghcr.io/plerx2493/quartz-db-mysql:latest
-            ghcr.io/plerx2493/quartz-db-mysql:${{ steps.previoustag.outputs.tag }}
+            ghcr.io/plerx2493/quartz-db-mysql:${{ github.sha }}
           build-args: |
-            "BUILD_VER=${{ steps.previoustag.outputs.tag }}"
+            "BUILD_VER=${{ github.sha }}"
