--- a/.github/workflows/containerImages.yml
+++ b/.github/workflows/containerImages.yml
@@ -29,6 +29,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./ModularAssistentForDiscordServer
+          file: ./ModularAssistentForDiscordServer/Dockerfile
           push: true
           tags: |
             ghcr.io/plerx2493/mads:latest
@@ -40,6 +41,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./QuartzNetDocker
+          file: ./QuartzNetDocker/Dockerfile
           push: true
           tags: |
             ghcr.io/plerx2493/quartz-db-mysql:latest
