--- a/.github/workflows/containerImages.yml
+++ b/.github/workflows/containerImages.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./ModularAssistentForDiscordServer
-          file: ./ModularAssistentForDiscordServer/Dockerfile
+          file: Dockerfile
           push: true
           tags: |
             ghcr.io/plerx2493/mads:latest
@@ -41,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./QuartzNetDocker
-          file: ./QuartzNetDocker/Dockerfile
+          file: Dockerfile
           push: true
           tags: |
             ghcr.io/plerx2493/quartz-db-mysql:latest
