--- a/.github/workflows/containerImages.yml
+++ b/.github/workflows/containerImages.yml
@@ -28,8 +28,7 @@ jobs:
       - name: Build and Push ModularAssistentForDiscordServer
         uses: docker/build-push-action@v3
         with:
-          context: ./ModularAssistentForDiscordServer
-          file: Dockerfile
+          file: ./ModularAssistentForDiscordServer/Dockerfile
           push: true
           tags: |
             ghcr.io/plerx2493/mads:latest
@@ -40,8 +39,7 @@ jobs:
       - name: Build and Push QuartzDB
         uses: docker/build-push-action@v3
         with:
-          context: ./QuartzNetDocker
-          file: Dockerfile
+          file: ./QuartzNetDocker/Dockerfile
           push: true
           tags: |
             ghcr.io/plerx2493/quartz-db-mysql:latest
