--- a/.github/workflows/containerImages.yml
+++ b/.github/workflows/containerImages.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
+          ref: ${{ github.ref }}
           
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
