--- a/.github/workflows/containerImages.yml
+++ b/.github/workflows/containerImages.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
-          ref: ${{ GITHUB_REF_NAME }}
+          ref: ${{ github.ref_name }}
           
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
