--- a/.github/workflows/containerImages.yml
+++ b/.github/workflows/containerImages.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and Push ModularAssistentForDiscordServer
         uses: docker/build-push-action@v3
         with:
-          file: ./ModularAssistentForDiscordServer/Dockerfile
+          context: ./ModularAssistentForDiscordServer
           push: true
           tags: |
             ghcr.io/plerx2493/mads:latest
@@ -40,7 +40,7 @@ jobs:
       - name: Build and Push QuartzDB
         uses: docker/build-push-action@v3
         with:
-          file: ./QuartzNetDocker/Dockerfile
+          context: ./QuartzNetDocker
           push: true
           tags: |
             ghcr.io/plerx2493/quartz-db-mysql:latest
