--- a/.github/workflows/containerImages.yml
+++ b/.github/workflows/containerImages.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./ModularAssistentForDiscordServer/
-          file: Dockerfile
+          file: ./ModularAssistentForDiscordServer/Dockerfile
           push: true
           tags: |
             ghcr.io/plerx2493/mads:latest
@@ -39,7 +39,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./QuartzNetDocker/
-          file: Dockerfile
+          file: ./ModularAssistentForDiscordServer/Dockerfile
           push: true
           tags: |
             ghcr.io/plerx2493/quartz-db-mysql:latest
