--- a/ModularAssistentForDiscordServer/Dockerfile
+++ b/ModularAssistentForDiscordServer/Dockerfile
@@ -1,7 +1,7 @@
 # BUILD
 FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 WORKDIR /src
-COPY ./ModularAssistentForDiscordServer ./
+COPY ../ModularAssistentForDiscordServer ./
 RUN dotnet restore
 RUN dotnet publish -c Release -o out
 
