--- a/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
+++ b/ModularAssistentForDiscordServer/ModularAssistentForDiscordServer.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>disable</Nullable>
+        <Nullable>enable</Nullable>
         <StartupObject>MADS.MainProgram</StartupObject>
         <RootNamespace>MADS</RootNamespace>
-        <LangVersion>11</LangVersion>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -22,31 +22,34 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="DeepL.net" Version="1.8.0" />
+        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01989" />
+        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01989" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01989" />
+        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-01989" />
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01989" />
+        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-01989" />
         <PackageReference Include="EntityFramework" Version="6.4.4" />
-        <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="7.0.0" />
+        <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="8.0.0" />
         <PackageReference Include="Humanizer.Core" Version="2.14.1" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0-2.final" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.8.0-2.final" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-preview.2.23128.3">
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.0-3.final" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.9.0-3.final" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.9.0-3.final" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-rc.2.23479.6" />
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
-        <PackageReference Include="Quartz" Version="3.7.0" />
-        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.7.0" />
-        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.7.0" />
-        <PackageReference Include="Quartz.Jobs" Version="3.7.0" />
-        <PackageReference Include="Quartz.Serialization.Json" Version="3.7.0" />
-        <PackageReference Include="Serilog" Version="3.1.0-dev-02071" />
-        <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
-        <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.2.0-dev-00918" />
-        <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-01829" />
-        <PackageReference Include="DSharpPlus.CommandsNext" Version="5.0.0-nightly-01829" />
-        <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-01829" />
-        <PackageReference Include="DSharpPlus.Rest" Version="5.0.0-nightly-01829" />
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0-nightly-01829" />
-        <PackageReference Include="DSharpPlus.VoiceNext" Version="5.0.0-nightly-01829" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0-beta.2" />
+        <PackageReference Include="Quartz" Version="3.8.0" />
+        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.8.0" />
+        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
+        <PackageReference Include="Quartz.Jobs" Version="3.8.0" />
+        <PackageReference Include="Quartz.Serialization.Json" Version="3.8.0" />
+        <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10370" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+        
     </ItemGroup>
 </Project>
