Update to new DSP version

--- a/ModularAssistentForDiscordServer/Dockerfile
+++ b/ModularAssistentForDiscordServer/Dockerfile
@@ -1,9 +1,11 @@
 # BUILD
 FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
+WORKDIR /Libs
+COPY ../Libs ./
 WORKDIR /src
 COPY ./ModularAssistentForDiscordServer ./
 RUN dotnet restore
-RUN dotnet publish -c Release -o out
+RUN dotnet publish -c Debug -o out
 
 # RUNNER IMAGE
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine
