dont build with debug

--- a/ModularAssistentForDiscordServer/Dockerfile
+++ b/ModularAssistentForDiscordServer/Dockerfile
@@ -3,7 +3,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 WORKDIR /src
 COPY ./ModularAssistentForDiscordServer ./
 RUN dotnet restore
-RUN dotnet publish -c Debug -o out
+RUN dotnet publish -c Release -o out
 
 # RUNNER IMAGE
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine
